# rusty-notes

./: Cargo.toml
.devcontainer/: devcontainer.json  docker-compose.yml
00 - Create a new RUST project /: readme.md
00 - Create a new RUST project /rust-template/: .gitignore  LICENSE  README.md
000 - Create a new cargo project/: Cargo.toml  README.md
000 - Create a new cargo project/src/: main.rs
01 - Variable assignment and Immutability/: Cargo.toml
01 - Variable assignment and Immutability/src/: main.rs
02 - Conditionals and Basics of control flow/: Cargo.toml
02 - Conditionals and Basics of control flow/src/: main.rs
03 - Introduction to loops/: Cargo.toml
04 - Other conditional statements (if let)/: Cargo.toml
04 - Other conditional statements (if let)/src/: main.rs
05 - The while loop/: Cargo.toml
06 - The for loop/: Cargo.toml
07 - Break and continue statements/: Cargo.toml
09 - Simple unit functions/: Cargo.toml
11 - Using arguments/: Cargo.toml
12 - The Borrowing concept/: Cargo.toml
13 - Using panic/: Cargo.toml
17 - Other struct uses/: Cargo.toml
18 - String and STR/: Cargo.toml
20 - Basics of Vectors/: Cargo.toml
21 - Retrieving values/: Cargo.toml
22 - Adding elements to Vectors/: Cargo.toml
24 - Using ENUM as a type/: Cargo.toml
25 - The option Enumerator/: Cargo.toml
26 - Applied Enums/: Cargo.toml
27 - Vectors with Enums/: Cargo.toml
28 - Exhaustive matches/: Cargo.toml
30 - Creating a library with cargo/: Cargo.toml
31 - Documenting your code/: Cargo.toml
32 - Using a Debugger/: Cargo.toml
(+29 files in other folders)
