[workspace]

members = [
    "000 - Create a new cargo project",
    "01 - Variable assignment and immutability",
    "02 - Conditionals and Basics of control flow",
    "03 - Introduction to loops",
    "04 - Other conditional statements (if let)",
    "05 - The while loop",
    "06 - The for loop",
    "07 - Break and continue statements",
    "08 - Match control flow",
    "09 - Simple unit functions",
    "10 - Return Values",
    "11 - Using arguments",
    "12 - The Borrowing concept",
    "13 - Using panic",
    "14 - Error handling",
    "15 - Defining Structs",
    "16 - Associated functions and Constructors",
    "17 - Other struct uses",
    "18 - String and STR",
    "19 - String Manipulation",
    "20 - Basics of Vectors",
    "21 - Retrieving values",
    "22 - Adding elements to Vectors",
    "23 - Defining an ENUM", 
    "24 - Using ENUM as a type", 
    "25 - The option Enumerator", 
    "26 - Applied Enums", "27 - Vectors with Enums", "28 - Exhaustive matches", "29 - File Size Formatter"]
